--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -18,7 +18,9 @@ eureka:
     fetchRegistry: true
     service-url:
       defaultZone: http://localhost:7001/eureka,http://localhost:7002/eureka
-
+  instance:
+    instance-id: payment8001
+    prefer-ip-address: true
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
