--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
       <module>cloud-eureka-server7001</module>
       <module>cloud-erueka-server7002</module>
       <module>cloud-provider-payment8002</module>
+      <module>cloud-consumer-feign-order80</module>
   </modules>
 
   <name>Maven</name>
