--- a/cloud-consumer-feign-order80/src/main/resources/application.yml
+++ b/cloud-consumer-feign-order80/src/main/resources/application.yml
@@ -6,3 +6,9 @@ eureka:
     register-with-eureka: false
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/
+
+
+logging:
+  level:
+    # feign日志以什么级别监控哪个接口
+    com.elevenchu.springcloud.service.PaymentFeignService: debug
