--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
       <module>cloud-erueka-server7002</module>
       <module>cloud-provider-payment8002</module>
       <module>cloud-consumer-feign-order80</module>
+      <module>cloud-provider-hystrix-payment8001</module>
+      <module>cloud-consumer-feign-hystrix-order80</module>
   </modules>
 
   <name>Maven</name>
