--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
       <module>cloud-consumer-feign-order80</module>
       <module>cloud-provider-hystrix-payment8001</module>
       <module>cloud-consumer-feign-hystrix-order80</module>
+      <module>cloud-gateway-gateway9527</module>
   </modules>
 
   <name>Maven</name>
