--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
       <module>cloud-provider-hystrix-payment8001</module>
       <module>cloud-consumer-feign-hystrix-order80</module>
       <module>cloud-gateway-gateway9527</module>
+      <module>cloud-config-client-3355</module>
   </modules>
 
   <name>Maven</name>
