--- a/cloud-config-client-3355/pom.xml
+++ b/cloud-config-client-3355/pom.xml
@@ -55,6 +55,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!--添加消息总线RabbitNQ支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org-springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 
     </dependencies>
 
