--- a/cloud-config-client-3366/pom.xml
+++ b/cloud-config-client-3366/pom.xml
@@ -51,6 +51,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <!--添加消息总线RabbitNQ支持-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amap</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org-springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
