--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
       <module>cloud-gateway-gateway9527</module>
       <module>cloud-config-client-3355</module>
       <module>cloud-config-client-3366</module>
+      <module>cloud-stream-rabbitmq-provider8801</module>
   </modules>
 
   <name>Maven</name>
