--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>cloud-stream-rabbitmq-consumer8802</module>
     <module>cloudalibaba-provider-payment9001</module>
     <module>cloudalibaba-provider-payment9002</module>
+    <module>cloudalibaba-consumer-nacos-order83</module>
   </modules>
 
   <name>Maven</name>
