--- a/cloudalibaba-provider-payment9002/src/main/resources/application.yml
+++ b/cloudalibaba-provider-payment9002/src/main/resources/application.yml
@@ -7,7 +7,11 @@ spring:
   cloud:
     nacos:
       discovery:
-        server-addr: localhost:8848 #配置Nacos地址
+
+        #配置Nacos地址
+        #server-addr: Localhost:8848
+        #换成nginx的1111端口，做集群
+        server-addr: 192.168.111.144:1111
 
 management:
   endpoints:
