--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <module>cloudalibaba-consumer-nacos-order83</module>
       <module>cloudalibaba-config-nacos-client3377</module>
       <module>cloudalibaba-sentinel-service8401</module>
+      <module>seata-order-service2001</module>
   </modules>
 
   <name>Maven</name>
