--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
       <module>cloudalibaba-config-nacos-client3377</module>
       <module>cloudalibaba-sentinel-service8401</module>
       <module>seata-order-service2001</module>
+      <module>seata-storage-service2002</module>
+      <module>seata-account-service2003</module>
   </modules>
 
   <name>Maven</name>
